@@ -5,6 +5,7 @@ Comprehensive changes can be found in Git change history:
 ## [0.14...]
 ### 2020-07-07
 	Fixed: Network status logging was not ignoring duplicate reports properly.
+	Changed: Attempt to make things smarter with audio device handling.
 ### 2020-06-29
 	Fixed: DynDNS debug output was confused.
 	Removed: Don't complain about watchlist rules with insufficient actions. This was done poorly.
